# poster-lambda

backend/: Cargo.toml
backend/src/: imagecrop.rs  index.html  lib.rs
frontend/: Cargo.toml
frontend/src/: index.html  lib.rs
