[package]
name = "poster-lambda-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
flowsnet-platform-sdk = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio_wasi = { version = "1.25.0", features = ["macros", "rt"] }
lambda-flows = "0.3"
image = { version = "0.23.0", default-features = false, features = ["jpeg", "png", "gif"] }
imageproc = "=0.21.0"
rusttype = "=0.9.2"
base64 = "0.12.3"
