[package]
name = "poster-lambda-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
tokio_wasi = { version = "1.25.0", features = ["macros", "rt"] }
lambda-flows = "0.3"
serde_json = "1"